Added -j8 to make examples in book
Compilation time can be greatly reduced if people use the `-j' option for
`make', which will distribute the `j'obs into multiple threads. So to help
the book readers, a `-j8' was added to the example scripts for all the
libraries and also in Quick start. A comment is added afterwards,
explaining that the `8' can be replaced with the number of CPU threads.

It could have been `-jN', but that would be a little cryptic and not work
if people didn't pay attention to the comment, making things a little
confusing. In this manner, even if they don't have 8 CPU threads, there
won't be any error and the speed will be up anyway (to the limit available
by their CPUs).

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -665,7 +665,7 @@ $ cd TOPGNUASTRO
 $ tar xf gnuastro-latest.tar.gz    # This works on `.tar.lz' too.
 $ cd gnuastro-X.X                  # Replace X.X with version number.
 $ ./configure
-$ make
+$ make -j8                         # Replace 8 with no. CPU threads.
 $ make check
 $ sudo make install
 @end example
@@ -2341,9 +2341,9 @@ run the following commands after you have downloaded
 
 @example
 $ tar xf gsl-latest.tar.gz
-$ cd gsl-X.X                     # Replace X.X with version number
+$ cd gsl-X.X                     # Replace X.X with version number.
 $ ./configure
-$ make
+$ make -j8                       # Replace 8 with no. CPU threads.
 $ make check
 $ sudo make install
 @end example
@@ -2406,7 +2406,7 @@ you have downloaded
 $ tar xf cfitsio_latest.tar.gz
 $ cd cfitsio
 $ ./configure --prefix=/usr/local --enable-sse2 --enable-reentrant
-$ make
+$ make -j8                         # Replace 8 with no. CPU threads.
 $ make utils
 $ ./testprog > testprog.lis
 $ diff testprog.lis testprog.out    # Should have no output
@@ -2451,7 +2451,7 @@ downloaded @url{ftp://ftp.atnf.csiro.au/pub/software/wcslib/wcslib.tar.bz2,
 $ tar xf wcslib.tar.bz2
 $ cd wcslib-X.X                    # Replace X.X with version number
 $ ./configure --without-pgplot LIBS="-pthread -lm"
-$ make
+$ make -j8                         # Replace 8 with no. CPU threads.
 $ make check
 $ sudo make install
 @end example
